cmake_minimum_required(VERSION 3.13)
project(Dojo2)
include_directories(/usr/src/gtest/include)
include_directories(/usr/local/include/gmock/include)
set(CMAKE_CXX_STANDARD 14)
find_package(Threads REQUIRED)
add_executable(Dojo2 main.cpp RpcApi.cpp RpcApi.h RPCInterface.cpp RPCInterface.h RPCReset.cpp RPCReset.h RpcTest.cpp RPCInterfaceMock.h RPCAccessCheck.cpp RPCAccessCheck.h RPCAccessCheckTest.cpp)
target_link_libraries(Dojo2 gtest gmock)
target_link_libraries(Dojo2 Threads::Threads)